; ModuleID = '/home/carl/AnghaBench/bitwise/ion/extr_ast.c_ast_dup.c'
source_filename = "/home/carl/AnghaBench/bitwise/ion/extr_ast.c_ast_dup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ast_arena = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @ast_dup(i8* %0, i64 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i8*, align 8
  store i8* %0, i8** %4, align 8
  store i64 %1, i64* %5, align 8
  %7 = load i64, i64* %5, align 8
  %8 = icmp eq i64 %7, 0
  br i1 %8, label %9, label %10

9:                                                ; preds = %2
  store i8* null, i8** %3, align 8
  br label %18

10:                                               ; preds = %2
  %11 = load i64, i64* %5, align 8
  %12 = call i8* @arena_alloc(i32* @ast_arena, i64 %11)
  store i8* %12, i8** %6, align 8
  %13 = load i8*, i8** %6, align 8
  %14 = load i8*, i8** %4, align 8
  %15 = load i64, i64* %5, align 8
  %16 = call i32 @memcpy(i8* %13, i8* %14, i64 %15)
  %17 = load i8*, i8** %6, align 8
  store i8* %17, i8** %3, align 8
  br label %18

18:                                               ; preds = %10, %9
  %19 = load i8*, i8** %3, align 8
  ret i8* %19
}

declare dso_local i8* @arena_alloc(i32*, i64) #1

declare dso_local i32 @memcpy(i8*, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
